<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_monitor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.groenewald@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>

  <exec_depend>bob_shared</exec_depend>
  <exec_depend>python-onvif2-zeep</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
