<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>bob_tracking</name>
    <version>1.2.16</version>
    <description>ROS2 Node for managing the tracking of the objects from the camera</description>
    <maintainer email="uapbob@gmail.com">Bob Universal Object Tracker</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>rcl_interfaces</depend>
    <depend>message_filters</depend>
    <depend>bob_interfaces</depend>
    <depend>bob_image_processing</depend>
    <depend>rclcpp_lifecycle</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
