<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_webapi</name>
  <version>1.2.16</version>
  <description>TODO:</description>
  <maintainer email="uapbob@gmail.com">Bob Universal Object Tracker</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>bob_shared</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
